# llm_evaluation

./: .env.development  .env.production  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
server/: .gitignore  README.md  pyproject.toml  requirements.txt
server/app/: .env  __init__.py  config.py  log.py  main.py
server/app/download/: 1704681740.xlsx
server/app/models/: __init__.py  exam.py  exam_detail.py  llm_model.py  model.py  question.py  question_set.py  user.py
server/app/routes/: __init__.py  exam.py  exam_detail.py  llm_model.py  question.py  question_set.py  user.py
server/app/serializer/: common.py
server/app/service/: exam_add_service.py  exam_detail_service.py  exam_list_service.py  llm_model_list_service.py  llm_model_modify_service.py  login_service.py  question_set_delete_service.py  question_set_detail_service.py  question_set_list_service.py  question_set_modify_service.py  question_xls_service.py  user_list_service.py
server/app/upload/: 1704358423_1704358209.xlsx  1704358564_1704358372.xlsx
server/app/util/: chatgpt.py
src/: App.vue  api.ts  apiOld.ts  config.ts  main.ts
src/components/: QuestionBankDetail.vue
src/i18n/: index.ts
src/i18n/lang/: en.ts
src/layout/: index.vue
src/layout/component/: aside.vue  breadcrumb.vue  header.vue  main.vue
src/layout/logo/: index.vue
src/router/: index.ts  route.ts
src/stores/: routesList.ts  themeConfig.ts  userInfo.ts
src/theme/: app.scss  element.scss
src/utils/: loading.ts  other.ts  request.ts
src/views/: apiChanged.ts
(+21 files in other folders)
