[tool.poetry]
name = "llm-evaluation"
version = "0.1.0"
description = ""
authors = ["bard_lightpaw <bard@lightpaw.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
pymysql = "^1.1.0"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"
python-dotenv = "^1.0.0"
flask-jwt-extended = "^4.6.0"
requests = "^2.31.0"
pandas = "^2.1.4"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
